# UGC

./: .env_example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ugc_workflow.yml
auth_app/: .env_example  Dockerfile  README.md  app.py  entrypoint.sh  pyproject.toml  pywsgi.py
auth_app/api/v1/: role.py  routers.py  social.py  user.py
auth_app/commands/: create_superuser.py
auth_app/core/: __init__.py  app_factory.py  jwt_factory.py  logger.py  oauth.py  swagger_factory.py  tracer.py
auth_app/db/: cache_factory.py  db_factory.py  wait_for_postgres.py  wait_for_redis.py
auth_app/enumeration/: __init__.py  errors.py  oauths.py  roles.py
auth_app/migrations/versions/: 7d67aa7b69c4_history_partition.py  baba78606e4a_init_migration.py
auth_app/models/: __init__.py  base_model.py  user_login_history.py  user_roles.py  user_social_account.py  user_user.py
auth_app/schemas/: __init__.py  schemas.py
auth_app/services/: decorators.py  oauth_service.py  role_service.py  token_service.py  user_service.py  utils.py
auth_app/settings/: config.py
auth_app/static/: swagger.json
deploy/: filebeat.yml  logstash.conf
etl_olap/: .env.example  Dockerfile  clickhouse_init.py  kafka_init.py  main.py  requirements.txt  settings.py
nginx/: nginx.conf
nginx/configs/: site.conf
olap_research/: Dockerfile  Makefile  docker-compose.yml
olap_research/data/: research.ipynb  time_result.pickle
reports/mypy_reports/ugc_app/: index.html
reports/mypy_reports/ugc_app/html/ugc_app/: __init__.py.html  main.py.html
reports/mypy_reports/ugc_app/html/ugc_app/src/api/: __init__.py.html
reports/mypy_reports/ugc_app/html/ugc_app/src/core/: __init__.py.html  config.py.html  logger.py.html
reports/mypy_reports/ugc_app/html/ugc_app/src/db/: __init__.py.html  event_storage.py.html
reports/mypy_reports/ugc_app/html/ugc_app/src/models/: __init__.py.html  base.py.html  ugs_events.py.html  utility.py.html
reports/mypy_reports/ugc_app/html/ugc_app/src/services/: __init__.py.html  base.py.html  decorators.py.html  view_history.py.html
research/olap_research/: docker-compose.yml  requirements.txt
research/storage_research/: docker-compose.yml
research/storage_research/psql/: ugc_db.sql
research/storage_research/src/: benchmarks.json  requirements.txt  research.ipynb  test.py
tests/functional/: .env_example  Dockerfile  conftest.py  docker-compose.yml  pyproject.toml  settings.py
tests/functional/models/: schemas.py
tests/functional/src/: test_etl_olap.py  test_ugc.py
tests/functional/testdata/: data.py
tests/functional/utils/: logger.py  subfunc.py  wait_for_auth.py  wait_for_clickhouse.py  wait_for_kafka.py  wait_for_postgres.py  wait_for_redis.py
ugc_app/: Dockerfile  main.py  requirements.txt
ugc_app/src/api/v1/: bookmarks.py  events.py  likes.py  reviews.py  views.py
ugc_app/src/core/: config.py  logger.py
ugc_app/src/db/: event_storage.py  kafka.py  mongo.py
ugc_app/src/models/: __init__.py  base.py  bookmark.py  like.py  review.py  ugs_events.py  utility.py  view.py
ugc_app/src/services/: base.py  decorators.py  movie_bookmark.py  movie_like.py  movie_review.py  movie_view.py  view_history.py
