[tool.poetry]
name = "ugc-sprint-2"
version = "0.1.0"
description = "UGC service"
authors = ["oorzhakau <oorzhakau@yandex.ru>"]
readme = "README.md"
packages = [{include = "ugc_sprint_2"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "3.8.4"
aiokafka = "0.8.0"
aioredis = "1.3.1"
aiosignal = "1.3.1"
anyio = "3.6.2"
async-timeout = "4.0.2"
attrs = "22.2.0"
backoff = "2.2.1"
certifi = "2022.12.7"
charset-normalizer = "3.0.1"
click = "8.1.3"
clickhouse-driver = "0.2.5"
ecdsa = "0.18.0"
factory-boy = "3.2.1"
faker = "15.3.2"
fastapi = "0.91.0"
flake8 = "6.0.0"
frozenlist = "1.3.3"
gunicorn = "20.1.0"
h11 = "0.14.0"
hiredis = "2.2.2"
idna = "3.4"
inflection = "0.5.1"
iniconfig = "2.0.0"
isort = "5.12.0"
kafka-python = "2.0.2"
mccabe = "0.7.0"
multidict = "6.0.4"
orjson = "3.8.6"
packaging = "23.0"
pluggy = "1.0.0"
psycopg2-binary = "2.9.5"
py = "1.11.0"
pyasn1 = "0.4.8"
pycodestyle = "2.10.0"
pydantic = "1.10.4"
pyflakes = "3.0.1"
pytest = "6.2.5"
pytest-asyncio = "0.20.2"
pytest-factoryboy = "2.5.0"
python-dateutil = "2.8.2"
python-dotenv = "0.21.0"
python-jose = "3.3.0"
pytz = "2022.7.1"
pytz-deprecation-shim = "0.1.0.post0"
redis = "4.4.0"
requests = "2.28.2"
rsa = "4.9"
six = "1.16.0"
sniffio = "1.3.0"
starlette = "0.24.0"
toml = "0.10.2"
typing-extensions = "4.4.0"
tzdata = "2022.7"
tzlocal = "4.2"
urllib3 = "1.26.14"
uvicorn = "0.20.0"
yarl = "1.8.2"
sentry-sdk = {extras = ["fastapi"], version = "^1.16.0"}
mypy = "^1.0.1"
lxml = "^4.9.2"
pymongo = "^4.3.3"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
