[tool.poetry]
name = "app"
version = "0.2.0"
description = "UGC Service"
authors = [
    "Alexander Oorzhak",
    "Vitaly Shchurov"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.5"
gevent = "^22.10.2"
configorm = "^0.1.1"
gunicorn = "^20.1.0"
redis = "^4.4.0"
pydantic = {extras = ["email"], version = "^1.10.2"}
backoff = "2.2.1"
python-dotenv = "^0.21.0"
orjson = "^3.8.3"
aioredis = "1.3.1"
factory-boy = "3.2.1"
faker = "15.3.2"
pytest = "6.2.5"
pytest-asyncio = "0.20.2"
pytest-factoryboy = "2.5.0"
aiohttp = "3.8.3"
aiokafka = "0.8.0"
clickhouse-driver = "0.2.5"
kafka-python = "2.0.2"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
aioredis = "1.3.1"
uvicorn = "0.19.0"
uvloop = "0.17.0"
httptools = "0.5.0"
authlib = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
